--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
   <section id="about" class="bg-secondary-light-9 mt-1 pt-3 pb-3">
     <div class="container">
       <h2 class="mb-2">About RQCSS Library</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ipsam animi aliquid sequi fuga, nam nesciunt dolore libero dolorem exercitationem aliquam cupiditate atque illo, quae dicta doloribus et? Ab ipsam inventore quam asperiores, sequi unde tenetur accusamus, distinctio magni necessitatibus quis deserunt id alias. Iste eum ea labore rerum voluptatibus.</p>
-      <p class="mt-1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta nam, corrupti dolorum inventore perspiciatis id illum repellat iste amet sapiente ducimus nihil molestias quasi, totam, ratione minima molestiae blanditiis iure consequatur praesentium debitis. Nulla maiores doloremque tempore nobis dolorum amet!</p>
+      <p>Run >>> npm i @rangequest/rqcss</p>
+      <p class="mt-1">Visit >>> <a 
+        href="https://www.npmjs.com/package/@rangequest/rqcss">https://www.npmjs.com/package/@rangequest/rqcss</a></p>
     </div>
   </section>
 
