added favicon. Fixed some urls in homepage.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
   <link rel="stylesheet" href="css/index.css">
   <title>RQCSS - Lightweight CSS Library</title>
   <meta name="description" content="The ultimate css lib to create a succesful blog or to make yours even better!"/>
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+  <link rel="manifest" href="images/site.webmanifest">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 </head>
 <body>
   
   <!-- navbar -->
-  <nav class="navbar justify-between">
+  <nav class="navbar justify-between" style="background-color: #123957; color: white;">
     <div class="container">
       <h1 class="site-title">RQCSS - Lightweight CSS Library</h1>
     </div>
@@ -21,7 +27,7 @@
     <div class="row justify-center">
       <div class="col-12-xs col-5-md mb-1 pd-1">
         <h1>
-          <div class="font-xxl mb-1">RQCSS</div>
+          <div class="font-xxl mb-1" style="color: #123957;">RQCSS</div>
         </h1>
         <div class="font-xl text-secondary">by RANGE QUEST</div>
         <p class="text-gray mt-2 mb-3">A Lightweight CSS Library</p>
@@ -40,7 +46,7 @@
       <h2 class="mb-2">About RQCSS Library</h2>
       <p>Run >>> npm i @rangequest/rqcss</p>
       <p class="mt-1">Visit >>> <a 
-        href="https://www.npmjs.com/package/@rangequest/rqcss">https://www.npmjs.com/package/@rangequest/rqcss</a></p>
+        href="https://www.npmjs.com/package/@rangequest/rqcss">@rangequest/rqcss @npmjs.com</a></p>
     </div>
   </section>
 
@@ -79,9 +85,6 @@
             <p class="m-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, hic!</p>
           </div>
         </div>
-      </div>
-      <div class="row justify-center mt-2">
-        <button class="btn-secondary text-white font-md">View All</button>
       </div>
     </div>
   </section>
