some content added to homepage

--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
   
   <!-- navbar -->
   <nav class="navbar justify-between" style="background-color: #123957; color: white;">
-    <div class="container">
-      <h1 class="site-title">RQCSS - Lightweight CSS Library</h1>
-    </div>
+    <h1 class="site-title">RQCSS Lib</h1>
   </nav>
 
   <!-- intro -->
@@ -217,9 +215,10 @@
   </section>
 
   <!-- footer -->
-  <footer class="bg-gray-light-7 p-2 mt-2" id="lib-footer">
+  <footer class="pt-3 pb-2 mt-3" id="lib-footer" style="background-color: #123957;  color: white;">
     <div class="container text-center">
-      © 2021 - <a href="https://range.quest">RQCSS Lib</a>
+      <p class="pb-2"><a href="https://range.quest">https://range.quest</a></p>
+      <p>© 2021 - <a href="https://range.quest">RQCSS Lib</a></p>
     </div>
   </footer>
 </body>
